# Alta_Qualidade_Software

./: .gitignore
repo_petrobahia/: .pre-commit-config.yaml  README.md  pyproject.toml
repo_petrobahia/data/: clientes.json
repo_petrobahia/legacy/: pedido_service.py
repo_petrobahia/reports/: test_report.html
repo_petrobahia/src/: main.py
repo_petrobahia/src/adapters/cli/: __init__.py  main_cli.py
repo_petrobahia/src/adapters/notifications/: __init__.py  console_notification.py
repo_petrobahia/src/adapters/repositories/: __init__.py  json_cliente_repository.py  json_pedido_repository.py
repo_petrobahia/src/adapters/use_cases/: __init__.py  process_pedido_use_case.py  register_cliente_use_case.py
repo_petrobahia/src/application/use_cases/: __init__.py  process_pedido_use_case.py  register_cliente_use_case.py
repo_petrobahia/src/domain/entities/: __init__.py  cliente.py  cupom.py  pedido.py  produto.py
repo_petrobahia/src/domain/services/: client_service.py  discount_service.py  pedido_service.py  pricing_service.py  rounding_service.py
repo_petrobahia/src/domain/test/: test_pricing_service.py
repo_petrobahia/src/domain/value_objects/: __init__.py  cnpj.py  email.py
repo_petrobahia/src/legacy/: order_service.py  pedido_service.py
repo_petrobahia/src/legacy/models/: cliente_model.py  (+2 more)
repo_petrobahia/src/models/: cliente_model.py  pedido_model.py
repo_petrobahia/src/ports/: __init__.py  cliente_repository_port.py  notification_port.py  pedido_repository_port.py
repo_petrobahia/src/services/: validation.py
repo_petrobahia/tests/: conftest.py
(+25 files in other folders)
