[tool.poetry]
name = "repo-petrobahia"
version = "0.1.0"
description = ""
authors = ["RodrigoMacedo99 <104858896+RodrigoMacedo99@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
